--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
+body {
+    padding: 0;
+    margin: 0;
+}
+
 .navbar {
     margin-bottom: 31px;
     border: none;
     box-shadow: 0 1px 2px rgba(0,0,0,.3);
 }
+
+.navbar-dark .navbar-brand {
+    color: #fff;
+    font-size: 55px;
 }
