--- a/style.css
+++ b/style.css
@@ -13,3 +13,9 @@ body {
     color: #fff;
     font-size: 55px;
 }
+
+.display-3 {
+    font-size: 3.5rem;
+    font-weight: 300;
+    line-height: 1.2;
+}
